fixed #636 z-index for color modal

--- a/assets/main.css
+++ b/assets/main.css
@@ -559,7 +559,7 @@ ul.pagination li a.current {
     width: 100%;
     height: 37px;
     top: 47px;
-    z-index: 20;
+    z-index: 21;
 }
 .quick-helper-panel {
     display: table-cell;
